<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercicio_Widgets1</string>
    <string name="action_settings">Settings</string>
    <string name="azul_prompt">azul</string>
    <string name="vermelho_prompt">vermelho</string>
    <string name="amarelo_prompt">amarelo</string>
	<string name="azul">On Blue</string>
	<string name="sem_azul">Off Blue</string>
	<string name="vermelho"> On Red</string>
	<string name="sem_vermelho">Off Red</string>
	<string name="amarelo">On Yellow</string>
	<string name="sem_amarelo">Off Yellow</string>
	<string name="button_prompt">Altere com a cor acima </string>
</resources>
