<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
	    <ImageButton 
	        android:id="@+id/button1"
	        android:src="@drawable/button_1_android"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="setColorRegion" />
	    <ImageButton 
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/button_2_android"
	        android:onClick="setColorRegion" />
    </LinearLayout>
    
    <RadioGroup
        android:id="@+id/rgopcoes" 
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <RadioButton
	        android:id="@+id/radioButton1" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/azul_prompt" />
	    <RadioButton
	        android:id="@+id/radioButton2" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vermelho_prompt" />
	    <RadioButton
	        android:id="@+id/radioButton3" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amarelo_prompt" />	
    </RadioGroup>
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_prompt"
            android:onClick="setColorRegion"/>
    </TableRow>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    
    <ToggleButton
        android:id="@+id/toggle_button1"
        android:textOn="@string/azul"
        android:textOff="@string/sem_azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToggleButton1" />
    <ToggleButton 
        android:id="@+id/toggle_button2"
        android:textOn="@string/vermelho"
        android:textOff="@string/sem_vermelho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToggleButton2" />   
    <ToggleButton 
        android:id="@+id/toggle_button3"
        android:textOn="@string/amarelo"
        android:textOff="@string/sem_amarelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToggleButton3" />
        
    </LinearLayout>
	
	<TextView 
	    android:id="@+id/color_region"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" 
        />
</LinearLayout>
